fix sily selectorow

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -97,6 +97,7 @@ html {
         line-height: 20px;
         margin: 10px !important;
         padding: 5px !important;
+        height: 28px;
       }
     }
   }
