--- a/src/footer.hbs
+++ b/src/footer.hbs
@@ -5,8 +5,8 @@
         <div class="footer__nav">
             <div class="footer__logo">
 
-                <div class="footer__logo-image" itemscope itemtype="http://schema.org/Organization">
-                    <a itemprop="url">
+                <div class="footer__logo-image" url="http://www.meeting-application.com/" itemscope itemtype="http://schema.org/Organization">
+                    <a itemprop="url" url="http://www.meeting-application.com/">
                         <img src="../../images/logo-nav.png" itemprop="logo" />
                     </a>
                 </div>
