--- a/src/nav.hbs
+++ b/src/nav.hbs
@@ -1,7 +1,7 @@
 <nav class="nav">
     <div class="nav__container container">
-        <div class="nav__logo" itemscope itemtype="http://schema.org/Organization">
-            <a itemprop="url">
+        <div class="nav__logo" url="http://www.meeting-application.com/" itemscope itemtype="http://schema.org/Organization">
+            <a itemprop="url" url="http://www.meeting-application.com/">
                 <img src="../../images/logo-nav.png" itemprop="logo" />
             </a>
         </div>
