--- a/src/footer.hbs
+++ b/src/footer.hbs
@@ -6,7 +6,7 @@
             <div class="footer__logo">
 
                 <div class="footer__logo-image" url="http://www.meeting-application.com/" itemscope itemtype="http://schema.org/Organization">
-                    <a itemprop="url" url="http://www.meeting-application.com/">
+                    <a itemprop="url" href="http://www.meeting-application.com/">
                         <img src="../../images/logo-nav.png" itemprop="logo" />
                     </a>
                 </div>
