fix font mobileseo

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -79,7 +79,7 @@ html .footer {
       font-weight: 500;
 
       @media (max-width: 768px) {
-        margin: 5px;
+        margin-bottom: 10px;
       }
 
       &:hover {
