--- a/src/pricing/rest/rest-assured.hbs
+++ b/src/pricing/rest/rest-assured.hbs
@@ -10,7 +10,7 @@
                 We accept
             </span>
             <span class="rest__text-info">
-                PayPayl, Credit Card, and money transfer payments
+                PayPal, Credit Card, and money transfer payments
             </span>
         </div>
 
