--- a/src/pricing/services/services.hbs
+++ b/src/pricing/services/services.hbs
@@ -32,7 +32,7 @@
             </h3>
 
             <p class="services__text">
-                If you have a complex agenta you can upload it into our system using a simple Excel template.
+                If you have a complex agenda you can upload it into our system using a simple Excel template.
             </p>
 
             <a class="services__button">
@@ -46,7 +46,7 @@
             </h3>
 
             <p class="services__text">
-                If you don't  have the time for managing the app on your own, can do it for you.
+                If you don't  have the time for managing the app on your own, we can do it for you.
             </p>
 
             <a class="services__button">
