--- a/src/pricing/services/services.scss
+++ b/src/pricing/services/services.scss
@@ -67,6 +67,8 @@ html .services {
   }
 
   &__button {
+    cursor: default;
+    font-weight: 700;
     margin-bottom: 30px;
     color: #19B9F2;
   }
