--- a/src/nav.hbs
+++ b/src/nav.hbs
@@ -21,7 +21,7 @@
                 Industries
             </a>
 
-            <a href="#features" class="nav__link">
+            <a href="./features.html" class="nav__link">
                 Features
             </a>
 
