--- a/src/features/features.scss
+++ b/src/features/features.scss
@@ -2,6 +2,8 @@
 @import "enhance/enhance";
 @import "key/key";
 @import "cta/cta";
+@import "cms/cms";
+@import "top/top";
 
 body {
   margin-top: 70px;
