--- a/src/features/key/key.scss
+++ b/src/features/key/key.scss
@@ -4,7 +4,7 @@
   background-color: #f4f4f4;
 
   &__header {
-    font-weight: normal;
+    font-weight: bold;
     text-align: center;
     font-size: 30px;
     color: rgb(30, 184, 241);
@@ -18,7 +18,7 @@
   &__header-info {
     font-size: 25px;
     text-align: center;
-    font-weight: normal;
+    font-weight: bold;
   }
 
   &__block {
