--- a/src/features/cms/cms.hbs
+++ b/src/features/cms/cms.hbs
@@ -1,7 +1,7 @@
 <section class="cms">
     <h1 class="cms__header">ZOBACZ, JAK ŁATWO UTWORZYC WYDARZENIE</h1>
 
-    <div class="owl-carousel owl-theme">
+    <div class="owl-carousel owl-theme cms__owl">
         <div class="cms__carousel-image">
             <img src="../../images/cms-3.png" />
         </div>
