--- a/src/features/top/top.scss
+++ b/src/features/top/top.scss
@@ -1,14 +1,15 @@
 .top {
+  margin-top: 70px;
   background-image: linear-gradient(20deg, #15416e 0%, #0d88d9 100%);
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 150px;
+  padding-bottom: 300px;
 
   &__header {
     text-align: center;
     color: white;
     line-height: 70px;
     font-size: 55px;
-    font-weight: bold;
+    font-weight: normal;
     margin-bottom: 10px;
   }
 
