--- a/src/features/top/top.hbs
+++ b/src/features/top/top.hbs
@@ -11,7 +11,8 @@
         </div>
 
         <div class="top__buttons">
-            <a class="button">
+            <a class="button top__discover">
+                <img class="top__discover-image" src="../../images/arrow-point-to-right.png">
                 ODKRYJ TERAZ
             </a>
 
