--- a/src/features/top/top.scss
+++ b/src/features/top/top.scss
@@ -4,6 +4,10 @@
   padding-top: 150px;
   padding-bottom: 230px;
 
+  @media (max-width: 450px) {
+    padding-top: 20px;
+  }
+
   &__header {
     text-align: center;
     color: white;
@@ -11,6 +15,10 @@
     font-size: 55px;
     font-weight: normal;
     margin-bottom: 10px;
+
+    @media (max-width: 450px) {
+      font-size: 40px;
+    }
   }
 
   &__info {
@@ -34,6 +42,16 @@
     display: flex;
     justify-content: center;
     padding-top: 40px;
+
+    @media (max-width: 450px) {
+      flex-direction: column;
+      align-items: center;
+
+      > * {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+      }
+    }
 
     .button {
       width: 218px;
