fix rwd obrazka

--- a/src/features/enhance/enhance.scss
+++ b/src/features/enhance/enhance.scss
@@ -4,6 +4,12 @@
   padding-top: 100px;
   padding-bottom: 100px;
   background-size: cover;
+  background-position: bottom right;
+
+  @media (max-width: 800px) {
+    background-position: bottom;
+    background-position-x: 800px;
+  }
 
   &__block {
     display: flex;
