--- a/src/features/features/features.scss
+++ b/src/features/features/features.scss
@@ -1,29 +1,25 @@
 .features {
-  padding-bottom: 650px;
-  background-color: #f4f4f4;
+  padding-bottom: 800px;
+  background: #f4f4f4;
+  transition: all ease-in 100ms;
 
-  @media (max-width: 700px) {
-    padding-bottom: 750px;
+  @media (max-width: 750px) {
+    padding-bottom: 900px;
   }
 
-  @media (max-width: 450px) {
-    padding-bottom: 800px;
+  @media (max-width: 500px) {
+    padding-bottom: 1100px;
   }
 
-  &__phones {
-    display: flex;
-    padding-top: 70px;
+  &__container {
     position: absolute;
+    display: flex;
+    justify-content: center;
+    padding-top: 70px;
     margin-top: -230px;
-    background-size: contain;
-    background-position-y: 120px;
-    background-repeat: no-repeat;
-    background-image: url(../../images/otheriphonespng.png);
     min-height: 530px;
-
-    @media (max-width: 894px) {
-      background-image: none;
-    }
+    left: 0;
+    right: 0;
   }
 
   &__phone {
@@ -48,6 +44,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-image: url("../../images/iphone.png");
+    transition: all linear 100ms;
   }
 
   &__info {
@@ -55,6 +52,23 @@
     margin-bottom: 20px;
     font-size: 18px;
     text-align: center;
+    max-width: 100vh;
+    width: 80vh;
+    opacity: 0;
+    transition: all linear 100ms;
+    transition-delay: 50ms;
+
+    @media (max-width: 750px) {
+      width: 50vh;
+    }
+
+    @media (max-width: 500px) {
+      width: 300px;
+    }
+
+    .swiper-slide-active & {
+      opacity: 1;
+    }
   }
 
   &__title {
@@ -62,12 +76,42 @@
     font-size: 25px;
     margin-bottom: 20px;
     text-align: center;
+    opacity: 0;
+    transition: all linear 100ms;
+    transition-delay: 50ms;
+    max-width: 100vh;
+    width: 80vh;
+    @media (max-width: 750px) {
+      width: 50vh;
+    }
+
+    @media (max-width: 500px) {
+      width: 300px;
+    }
+    .swiper-slide-active & {
+      opacity: 1;
+    }
   }
 
   &__description {
     text-align: center;
     font-size: 14px;
     line-height: 25px;
+    opacity: 0;
+    transition: all linear 100ms;
+    transition-delay: 50ms;
+    max-width: 100vh;
+    width: 80vh;
+    @media (max-width: 750px) {
+      width: 50vh;
+    }
+
+    @media (max-width: 500px) {
+      width: 300px;
+    }
+    .swiper-slide-active & {
+      opacity: 1;
+    }
   }
 }
 
@@ -106,4 +150,47 @@
   .owl-theme .owl-nav [class*='owl-']:hover {
     background: none !important;
   }
+
+  .swiper-container {
+    width: auto;
+    max-width: 1050px;
+
+    &:before {
+      content: "";
+      top: 160px;
+      z-index: 99;
+      left: 0;
+      position: absolute;
+      height: 40%;
+      width: 100%;
+      background: linear-gradient(to right, #f4f4f4 0%, rgba(244, 244, 244, 0) 5%), linear-gradient(to left, #f4f4f4 0%, rgba(244, 244, 244, 0) 5%);
+    }
+  }
+  .swiper-button-next, .swiper-button-prev {
+    top: 400px !important;
+  }
+
+  .swiper-pagination-bullet {
+    width: auto;
+    background: none;
+    font-size: 14px;
+    margin: 0 30px !important;
+    height: auto !important;
+    transform: none !important;
+    min-width: 220px;
+    outline: none !important;
+
+  }
+
+  .swiper-pagination-bullet-active {
+    color: #0d88d9;
+    font-size: 18px;
+  }
+
+  .swiper-pagination-bullets-dynamic {
+    display: flex;
+    bottom: -50px;
+    z-index: 90;
+  }
+
 }
