--- a/src/features/top/top.scss
+++ b/src/features/top/top.scss
@@ -25,7 +25,6 @@
   &__info {
     text-align: center;
     color: white;
-    font-style: italic;
     font-size: 20px;
   }
 
@@ -43,6 +42,10 @@
     display: flex;
     justify-content: center;
     padding-top: 40px;
+
+    .button {
+      box-shadow: none !important;
+    }
 
     @media (max-width: 450px) {
       flex-direction: column;
