--- a/src/features/cms/cms.hbs
+++ b/src/features/cms/cms.hbs
@@ -3,15 +3,15 @@
 
     <div class="owl-carousel owl-theme cms__owl">
         <div class="cms__carousel-image">
-            <img src="../../images/cms-3.png" />
+            <img src="../../images/cms_en_1.png" />
         </div>
 
         <div class="cms__carousel-image">
-            <img src="../../images/cms-3.png" />
+            <img src="../../images/cms_en_2.png" />
         </div>
 
         <div class="cms__carousel-image">
-            <img src="../../images/cms-3.png" />
+            <img src="../../images/cms_en_3.png" />
         </div>
     </div>
 </section>
