--- a/src/footer.hbs
+++ b/src/footer.hbs
@@ -99,24 +99,24 @@
         </div>
 
         <div class="footer__social">
-            <a href="https://www.linkedin.com/company/5150093" target="_blank">
+            <a href="https://www.linkedin.com/company/5150093" rel="noopener noreferrer" target="_blank">
                 <img src="../../images/linked-in.png" class="footer__social__image" />
             </a>
 
-            <a href="https://twitter.com/Meeting_App" target="_blank">
+            <a href="https://twitter.com/Meeting_App" rel="noopener noreferrer" target="_blank">
                 <img src="../../images/twitter.png" class="footer__social__image" />
             </a>
 
-            <a href="https://www.facebook.com/MeetingApplication" target="_blank">
+            <a href="https://www.facebook.com/MeetingApplication" rel="noopener noreferrer" target="_blank">
                 <img src="../../images/facebook.png" class="footer__social__image" />
             </a>
 
             <div class="footer__stores">
-                <a href="https://play.google.com/store/apps/details?id=us.appswith.meetingapplication" target="_blank">
+                <a href="https://play.google.com/store/apps/details?id=us.appswith.meetingapplication" rel="noopener noreferrer" target="_blank">
                     <img src="../../images/google-play.png" class="footer__stores__image" />
                 </a>
 
-                <a href="https://itunes.apple.com/us/app/meeting-application/id773192307" target="_blank">
+                <a href="https://itunes.apple.com/us/app/meeting-application/id773192307" rel="noopener noreferrer" target="_blank">
                     <img src="../../images/app-store.png" class="footer__stores__image" />
                 </a>
             </div>
