--- a/src/features/top/top.scss
+++ b/src/features/top/top.scss
@@ -14,8 +14,8 @@
     color: white;
     line-height: 70px;
     font-size: 55px;
-    font-weight: normal;
-    margin-bottom: 10px;
+    font-weight: 700;
+    margin-bottom: 20px;
 
     @media (max-width: 450px) {
       font-size: 34px;
