--- a/src/features/top/top.scss
+++ b/src/features/top/top.scss
@@ -34,8 +34,10 @@
   }
 
   &__discover-image {
-    width: 10px;
+    width: 8px;
     margin-right: 20px;
+    transform: rotate(90deg);
+    filter: brightness(100);
   }
 
   &__buttons {
